# BotAInik

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: linter.yml
backend/: app.py
docs/data_science/advanced-machine-learning/: 1.МГК.txt
docs/data_science/algorithms/: page1.txt  page10.txt  page11.txt  page12.txt  page2.txt  page3.txt  page4.txt  page5.txt  page6.txt  page7.txt  page8.txt  page9.txt
docs/data_science/applied-artificial-intelligence/: 1.AI_transport.txt  2.Биометрия и речь.txt  3.Графы знаний.txt  4.ИБ.txt  6.ImageProcessing.txt
docs/data_science/automatic-text-processing/: 1_Автоматическая_обработка_текстов.txt  2_Информационный_поиск.txt  3_Классификация.txt  4_Лексические_ресурсы.txt
docs/data_science/elements-of-statistical-data-processing/: 1_Введение в теорию вероятностей.txt  2_Законы распределения случайных величин.txt  3_Описательная статистика и точечные оценки.txt  4_Интервальное оценивание.txt  5_Проверка гипотез.txt
docs/data_science/habr_ods/: 1.Теория вероятностей в машинном обучении.txt  2.Теория вероятностей в машинном обучении.txt  CNN_python1.txt  CNN_python2.txt  CNN_python3.txt  CatBoost, XGBoost и выразительная способность решающих деревьев.txt  PCA и кластеризация.txt  SVM. Подробный разбор метода опорных векторов.txt  АБ-тесты — это не только ценный мех… Но еще и процессы.txt  Анализ временных рядов с помощью Python.txt  Визуализация больших графов для самых маленьких.txt  Визуализация данных c Python .txt  Градиентный бустинг.txt  Интерпретация моделей и диагностика сдвига данных.txt  Интерпретируемость ML-моделей.txt  Как организовать процесс АВ тестирования на коленке.txt  Классификация, деревья решений и метод ближайших соседей.txt  Коэффициент Джини.txt  Кто такие LLM-агенты и что они умеют.txt  Линейные модели классификации и регрессии.txt  Нюансы распознавания речи..txt  Обучение на гигабайтах с Vowpal Wabbit.txt  Построение и отбор признаков.txt  Применение сверточных нейронных сетей для задач NLP.txt  Тема 1. Первичный анализ данных с Pandas.txt  Что я бы хотел знать про ML System Design.txt  бэггинг, случайный лес.txt
docs/data_science/habr_yandex/: Quantization Deep Dive, или Введение в современную квантизацию.txt  Как DDoS-атаки стали для нас рутиной и как ML помогает.txt  Как развивалась технология экстремального сжатия LLM.txt  Софтмакс Гумбеля.txt  (+3 more)
docs/introduction-to-machine-learning/: 1.Введение_в_МО.txt  2.Регрессия.txt  3.Классификаторы_KNN_и_наивный_байес.txt  4.LogisticRegression.txt  5.Кластеризация.txt
frontend/: index.html  script.js  style.css
src/: config.py
src/botAInik/: config.py  database.py  main.py  model_api.py  rag_interface.py  retriever.py
src/botainik/: embedder.py  html_parser.py
src/configs/: config.yaml
src/parsers/: html_parser.py  main.py  parse-hugging-nlp.ipynb  pdf_parser.py  splitter.py  tex_parser.py
src/rag_pipeline/: encoder.py  llms.py  rag_chain.py  retriever.py
src/scripts/: chunk_data.py  ingest_data.py  process_chunks.py
src/tests/: test_app.py
src/utils/: doc_loaders.py
src/validation/: valid.py  validation_example.ipynb
(+211 files in other folders)
