[tool.poetry]
name = "BotAInik"
version = "0.1.0"
description = "RAG to prepare for DS interviews, the project was carried out within the framework of the ITMO discipline Introduction to LLM"
authors = ["Anna Sidorova <anna.pav.sidorova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.320"
langsmith = "^0.0.45"
openai = "^0.27.0"
requests = "^2.31.0"
python-telegram-bot = "^20.3"
chromadb = "^0.3.29"
pypdf = "^3.15.2"
tiktoken = "^0.5.1"
sqlite-utils = "^3.33.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
python-docx = "^0.8.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
black = "^23.9.1"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]

[tool.black]
line-length = 99
target-version = ["py310"]
